# librarian

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE-APACHE  README.md  index.html  tailwind.config.js
.cargo/: config.toml
assets/: file_system.js  tailwind.css
src/: arena.rs  bit_field.rs  button.rs  file_system.rs  local_file.rs  main.rs  store.rs  world.rs
