[package]
name = "librarian"
version = "0.1.0"
authors = ["Bora"]
edition = "2021"

[profile.dev]
debug = 0
strip = "debuginfo"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web"] }
idb = "0.6.2"
futures-util = "0.3.30"
wasm-bindgen = "0.2.92"
serde = { version = "1", features = ["rc"] }
serde-wasm-bindgen = "0.6.5"

# Debug
tracing = { version = "0.1.40", features = ["log"] }
dioxus-logger = "0.5.0"
